fix_text-align
商品情報を左寄せに修正

--- a/app/assets/stylesheets/products/show.scss
+++ b/app/assets/stylesheets/products/show.scss
@@ -69,6 +69,7 @@
         padding: 15px 15px;
         border: 1px solid #dedede;
         font-size: 14px;
+        text-align: left;
       }
     }
     &_edit-btn {
